--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:smart-tools.helloWorld"
+        "onCommand:smart-tools.CreatePage"
 	],
 	"main": "./extension.js",
 	"contributes": {
 		"commands": [{
-            "command": "smart-tools.helloWorld",
-            "title": "Hello World"
-
+            "command": "smart-tools.CreatePage",
+            "title": "Create Page"
 		}]
 	},
 	"scripts": {
